--- a/pages/index.html
+++ b/pages/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="pages/style.css">
-    <script src="/clientsever.js"></script>
+    <link rel="stylesheet" href="indexstyle.css">
+    <script src="client.js"></script>
     <title>My diary page</title>
 </head>
 <body class="indexbody">
 
-    <div id="topbar"> <a class="fcc-btn" href="pages/signuppages.html">sign up</a></div>
+    <div id="topbar"> <a class="fcc-btn" href="signuppages.html">sign up</a></div>
    
-    <div id="mainleft"><img height="1000px" width="510px" src="pages/images/diary_PNG5font.png" alt="coverfront"></div>
+    <div id="mainleft"><img height="1000px" width="510px" src=" images/diary_PNG5font.png" alt="coverfront"></div>
     <div id="mainright">
         <fieldset>
             <legend><h1>welcome!</h1></legend>
