--- a/pages/signuppages.html
+++ b/pages/signuppages.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="client.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>sign up!</title>
 </head>
@@ -17,8 +19,8 @@
             <legend><h3>welcome!</h3></legend>
             <img src="images/profileplaceholer.png"   id="photodisplay" alt="uploadphoto" height="100px" width="100px">
             <br>
-            <input type="file" id="myFile" name="filename">
-             <input type="submit">
+            <input type="url" id="imgurl" name="filename">
+            <button onclick="updateImg()">Update Image</button>
   
 
         <!-- User info input-->
