Partial opendiary.js functionality, rethinking diary setup, fixed error being thrown on share page

--- a/pages/opendiary.html
+++ b/pages/opendiary.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <script src="opendiary.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>open diary</title>
@@ -17,7 +17,6 @@
                       <p id="diaryname">user name and name of diary returnded</p>
                       <p id="userame"></p>
                          <br>
-                            <h1>BY</h1>
                          <p id="diarynameout"></p>
                          <a class="fcc-btn" href="diaryeditting.html">click to open diary</a>
                 </div>
