Half merge with Forgotpassword branch, functionality for pulling diary data from server for textediting.js, still only prototype opendiary.js/html

--- a/pages/opendiary.html
+++ b/pages/opendiary.html
@@ -18,7 +18,7 @@
                       <p id="userame"></p>
                          <br>
                          <p id="diarynameout"></p>
-                         <a class="fcc-btn" href="diaryeditting.html">click to open diary</a>
+                         <button onclick="toEditing()">Click to open diary</button>
                 </div>
              </div>
   
