Added more serverside functionality to opendiary.js and commented TODO's

--- a/pages/index.html
+++ b/pages/index.html
@@ -20,7 +20,7 @@
         
         <p> Username:<input type="text" name="usernamelog" id="usernamelog"size="15" maxlength="32">
         </p>
-        <p> password:<input type="text" name="passwordlog" id="passwordlog" size="15" maxlength="32">
+        <p> password:<input type="password" name="passwordlog" id="passwordlog" size="15" maxlength="32">
         </p>
         <p><h5><a href="#">Forgot my password</a></h5></p>
         <p>
