--- a/pages/index.html
+++ b/pages/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="indexstyle.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="client.js"></script>
+    <script src="index.js"></script>
     <title>My diary page</title>
 </head>
 <body class="indexbody">
@@ -20,9 +20,9 @@
         
         <p> Username:<input type="text" name="usernamelog" id="usernamelog"size="15" maxlength="32">
         </p>
-        <p> password:<input type="text" name="passwordlog" id="passwordlog" size="15" maxlength="32">
+        <p> Password:<input type="password" name="passwordlog" id="passwordlog" size="15" maxlength="32">
         </p>
-        <p><h5><a href="#">Forgot my password</a></h5></p>
+        <p><h5><a href="forgotpsw.html">Forgot my password</a></h5></p>
         <p>
             <input type="submit" name="loginbtrn" onclick="indexlogin()">
         </p>
