--- a/pages/opendiary.html
+++ b/pages/opendiary.html
@@ -10,15 +10,15 @@
     <title>open diary</title>
 </head>
 <body>
-    <div id="topbar"><a class="fcc-btn" href="pages/signuppages.html">logout</a></div>
+    <div id="topbar"><a class="fcc-btn" href="index.html">Logout</a></div>
              <div class="outerbox">
                  <div id="innerbox">
                     
-                      <p id="diaryname">user name and name of diary returnded</p>
-                      <p id="userame"></p>
+                      <p id="diaryname">User name and name of diary returned</p>
+                      <p id="username"></p>
                          <br>
                          <p id="diarynameout"></p>
-                         <button onclick="toEditing()">Click to open diary</button>
+                         <a class="fcc-btn" href="diaryeditting.html">Click to open diary</a>
                 </div>
              </div>
   
