--- a/pages/sharediarypage.html
+++ b/pages/sharediarypage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="client.js"></script>
+    <script src="share.js"></script>
     <title>Share your diary</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
     <div class="shareContainerDiv">
         <div class="sharerinner">
         <img src="images/profileplaceholer.png" alt="shareduserphoto" id="shareduserphoto" height="200px" width="200px"></img>
-        <h5>enter the user name of the person you which to add</h5>
+        <h5>Enter the user name of the person you which to add</h5>
         <input type="text" id="addperson"> <input type="button" value="add" onclick="addToShareDiary()">
     </div>
     </div>
