--- a/pages/forgotpsw.html
+++ b/pages/forgotpsw.html
@@ -39,7 +39,7 @@
 
     <br><br>
 
-    <a href=""><button id="changepasswordbutton">Change Password</button></a>
+    <a href="index.html"><button id="changepasswordbutton">Change Password</button></a>
 
     </div>
 
