--- a/pages/signuppages.html
+++ b/pages/signuppages.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="client.js"></script>
+    <script src="signup.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>sign up!</title>
+    <title>Sign up!</title>
 </head>
 <body>
     <div id="topbar"></div>
@@ -26,9 +26,9 @@
         <!-- User info input-->
         <p> Username:<input type="text" id="username" name="username" size="15" maxlength="32">
         </p>
-        <p> password:<input type="password" id="password" name="username" size="15" maxlength="32">
+        <p> Password:<input type="password" id="password" name="username" size="15" maxlength="32">
         </p>
-        <p> re-enter password:<input type="password" id="repassword" name="username" size="15" maxlength="32">
+        <p> Re-enter password:<input type="password" id="repassword" name="username" size="15" maxlength="32">
         </p>
     
       
