DiaryEditing page is function, diaries are saved and retrieved (opendiary page not in final state) also change password clientside is broken

--- a/pages/changepassword.html
+++ b/pages/changepassword.html
@@ -5,6 +5,8 @@
     
     <title>Forgot Password</title>
     <link rel="stylesheet" type="text/css" href="style.css" >
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="changepassword.js"> </script>
 
 </head>
 <body>
@@ -15,7 +17,7 @@
 
     <div id="formbox">
 
-        <h2 id="forgotpasswordinstructions">If you have forgotten your password, please fill out the following information:</h2>
+        <h2 id="forgotpasswordinstructions">If you want to change your password, please fill out the following information:</h2>
         <hr>
 
         <label for="originalusername">Enter Username: </label> <br>
@@ -39,7 +41,7 @@
 
     <br><br>
 
-    <a href=""><button id="changepasswordbutton">Change Password</button></a>
+    <a href=""><button onclick="changePassword()"id="changepasswordbutton">Change Password</button></a>
 
     </div>
 
