--- a/pages/diaryeditting.html
+++ b/pages/diaryeditting.html
@@ -12,7 +12,7 @@
 <body>
     <div id="topbar">
         
-        <a href="goodbypage.html"><button id="saebutton">Save and Exit</button></a>
+        <button id="saebutton" onclick="saveButton()">Save and Exit</button>
     
     </div>
 
