Completed functionality for buttons, but has bugs
The array 'titlelist' is not properly defined when the page loads

--- a/pages/opendiary.html
+++ b/pages/opendiary.html
@@ -7,22 +7,14 @@
     <script src="opendiary.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>open diary</title>
+    <title>Open diary</title>
 </head>
 <body>
-    <div id="topbar"><a class="fcc-btn" href="index.html">Logout</a></div>
+    <div id="topbar"><a class="fcc-btn" href="goodbypage.html">Logout</a></div>
              <div class="outerbox">
-                 <div id="innerbox">
-                    
-                      <p id="diaryname">User name and name of diary returned</p>
-                      <p id="username"></p>
-                         <br>
-                         <p id="diarynameout"></p>
-                         <a class="fcc-btn" href="diaryeditting.html">Click to open diary</a>
-                </div>
+                 <div id="innerbox"></div>
              </div>
-  
-             
+
              <footer>
                 <hr>
                <h6>&copy Delta M software solutions</h6> 
