Updated files to current JS_split branch

--- a/pages/index.html
+++ b/pages/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="indexbody">
 
-    <div id="topbar"> <a class="fcc-btn" href="signuppages.html">sign up</a></div>
+    <div id="topbar"> <a class="fcc-btn" href="signuppages.html">Sign Up</a></div>
    
     <div id="mainleft"><img height="1000px" width="510px" src=" images/diary_PNG5font.png" alt="coverfront"></div>
     <div id="mainright">
