Full overwrite, complete functionality for opendiary.js and fixed serverside milk truck issue

--- a/pages/opendiary.html
+++ b/pages/opendiary.html
@@ -18,7 +18,7 @@
                       <p id="userame"></p>
                          <br>
                          <p id="diarynameout"></p>
-                         <button onclick="toEditing()">Click to open diary</button>
+                         <button onclick="createNewDiary()">Click to create a new diary</button>
                 </div>
              </div>
   
