Updated to current JS_split branch
Added additional comments and todos on opendiary.js, fixed reference link for opendiary.html

--- a/pages/opendiary.html
+++ b/pages/opendiary.html
@@ -7,14 +7,22 @@
     <script src="opendiary.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Open diary</title>
+    <title>open diary</title>
 </head>
 <body>
-    <div id="topbar"><a class="fcc-btn" href="goodbypage.html">Logout</a></div>
+    <div id="topbar"><a class="fcc-btn" href="goodbypage.html">logout</a></div>
              <div class="outerbox">
-                 <div id="innerbox"></div>
+                 <div id="innerbox">
+                    
+                      <p id="diaryname">user name and name of diary returnded</p>
+                      <p id="username"></p>
+                         <br>
+                         <p id="diarynameout"></p>
+                         <button onclick="createNewDiary()">Click to create a new diary</button>
+                </div>
              </div>
-
+  
+             
              <footer>
                 <hr>
                <h6>&copy Delta M software solutions</h6> 
