--- a/sharediarypage.html
+++ b/sharediarypage.html
@@ -17,7 +17,7 @@
             <h2>Share Your Diary</h2>
         <img src="images/profileplaceholer.png" id="pfp" alt="uploadphoto" height="200px" width="200px"></img>
         <h5>Enter the username of who you would like to share your current diary with:</h5>
-        <input type="text" id="sharetousername"> <button id="adduserbtn" onclick="adduser()">Add user</button>
+        <input type="text" id="sharetousername"> <button id="searchuserbtn" onclick="adduser()">Search User</button>
     </div>
     </div>
     <footer>
