--- a/pages/sharediarypage.html
+++ b/pages/sharediarypage.html
@@ -5,17 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="share.js"></script>
     <title>Share your diary</title>
 </head>
 <body>
-    <div id="topbar"> <a class="fcc-btn" href="goodbypage.html">logout</a></div>
+    <div id="topbar"> 
+        <button id="logoutbtn" onclick="logoutfunc()">Logout</button>
+    </div>
     <div class="shareContainerDiv">
         <div class="sharerinner">
-        <img src="images/profileplaceholer.png" alt="shareduserphoto" id="shareduserphoto" height="200px" width="200px"></img>
-        <h5>enter the user name of the person you which to add</h5>
-        <input type="text" id="addperson"> <input type="button" value="add" onclick="addToShareDiary()">
+            <h2>Share Your Diary</h2>
+        <img src="images/profileplaceholer.png" id="shareduserphoto" alt="uploadphoto" height="200px" width="200px"></img>
+        <h5>Enter the username of who you would like to share your current diary with:</h5>
+        <input type="text" id="addperson"> 
+        <button id="searchuserbtn" onclick="givemeauser()">Search User</button>
+        <button id='adduserbuton' onclick="adduser()">Add This user</button>
     </div>
     </div>
     <footer>
@@ -23,4 +29,5 @@
        <h6>&copy Delta M software solutions</h6> 
     </footer>
 </body>
+</html>
 </html>
