Added better functionality/asthetics for the share page, finished all functionality except change password

--- a/pages/sharediarypage.html
+++ b/pages/sharediarypage.html
@@ -18,10 +18,11 @@
         <div class="sharerinner">
             <h2>Share Your Diary</h2>
         <img src="images/profileplaceholer.png" id="shareduserphoto" alt="uploadphoto" height="200px" width="200px"></img>
+        <h4 id="displayuserheader">hh</h4>
         <h5>Enter the username of who you would like to share your current diary with:</h5>
         <input type="text" id="addperson"> 
         <button id="searchuserbtn" onclick="givemeauser()">Search User</button>
-        <button id='adduserbuton' onclick="adduser()">Add This user</button>
+        <button id='adduserbtn' disabled=true onclick="adduser()">Add This user</button>
     </div>
     </div>
     <footer>
