Updated test files
All test files are prototyped, check functionality of tests

--- a/loginTest.html
+++ b/loginTest.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Mocha Tests</title>
+    <link rel="stylesheet" href="./node_modules/mocha/mocha.css">
 </head>
 <body>
     <div id="mocha"></div>
