--- a/serverTest.html
+++ b/serverTest.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Mocha Tests</title>
+    <link rel="stylesheet" href="./node_modules/mocha/mocha.css">
 </head>
 <body>
     <div id="mocha"></div>
@@ -18,7 +19,6 @@
     <script src="opendiary.js"></script>
     <script src="share.js"></script>
     <script src="textediting.js"></script>
-    
 
     <!-- load tests for login -->
     <script src="tests/serverTest.js"></script>
