--- a/openDiaryTest.html
+++ b/openDiaryTest.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Mocha Tests</title>
+    <link rel="stylesheet" href="./node_modules/mocha/mocha.css">
 </head>
 <body>
     <div id="mocha"></div>
